# GameController

./: .gitignore  Cargo.toml  README.md
.github/workflows/: mkdist.yml
config/: teams.yaml
config/large_advanced/: params.yaml  teams.yaml
config/large_foundation/: params.yaml  teams.yaml
config/middle_advanced/: params.yaml  teams.yaml
config/middle_foundation/: params.yaml  teams.yaml
config/small_advanced/: params.yaml  teams.yaml
config/small_foundation/: params.yaml  teams.yaml
frontend/: package-lock.json
frontend/src/: actions.js  api.js
frontend/src/components/main/: ClockPanel.jsx  PlayerButton.jsx  StatePanel.jsx  TeamPanel.jsx  UndoPanel.jsx
game_controller_api/: Cargo.toml  build.rs
game_controller_api/src/: lib.rs
game_controller_app/: tauri.conf.json
game_controller_core/src/: action.rs  lib.rs  timer.rs  types.rs
game_controller_core/src/actions/: add_additional_time.rs  free_set_play.rs  goal.rs  mod.rs  penalize.rs  select_goalkeeper.rs  select_penalty_shot_player.rs  start_extra_time.rs  start_set_play.rs  substitute.rs  unpenalize.rs
game_controller_logs/src/: statistics.rs
game_controller_msgs/headers/: RoboCupGameControlData.h
game_controller_msgs/src/: control_message.rs
