[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "game_controller_api"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
bytes = { workspace = true }
enum-map = { workspace = true }
game_controller_core = { workspace = true }
game_controller_msgs = { workspace = true }
serde_yaml = { workspace = true }

[build-dependencies]
cbindgen = { version = "0.29.0" }

[lib]
crate-type = ["cdylib"]
